# tree-sitter-vcard

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-vcard.pc.in
bindings/c/tree_sitter/: tree-sitter-vcard.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_vcard/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSittervCardTests/: TreeSittervCardTests.swift
src/: grammar.json  node-types.json  parser.c
test/: group.vcf  multi-lines.vcf  multi-params.vcf  multi-values.vcf  param.vcf  simple.vcf  value-parts.vcf
test/corpus/: group.txt  multi-lines.txt  multi-params.txt  multi-values.txt  param.txt  simple.txt  value-parts.txt
