[package]
name = "tree-sitter-vcard"
description = "vCard parser"
version = "0.3.0"
authors = ["Titouan Real <titouan.real@gmail.com>"]
license = "APACHE-2.0 OR MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "vcard"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/titouanreal/tree-sitter-vcard"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.9"
